ugly, but something is working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <title>Topic-flavoured Dataset Explorer</title>
 </head>
 <body>
-<div id="app"></div>
+<div id="app" class="vw-100 vh-100"></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
